# hargassner-api

./: .gitignore  LICENSE  NOTES  README.md  pyproject.toml  requirements.txt  test_client.py
hargassner/: __init__.py  client.py
